Add EGL/OpenGLES modules
This adds EGL and OpenGLES modules and sets up dependencies between
them.

Affects #5

--- a/org.lwjgl.opengl/pom.xml
+++ b/org.lwjgl.opengl/pom.xml
@@ -221,6 +221,8 @@
                   org.lwjgl,
                   org.lwjgl.system,
                   org.lwjgl.system.*
+
+                  <!-- TODO: Optional dependency on OpenCL -->
                 </Import-Package>
 
                 <!-- Do not include Java 9 classes from META-INF due to -->
