--- a/org.lwjgl.glfw/pom.xml
+++ b/org.lwjgl.glfw/pom.xml
@@ -65,7 +65,7 @@
   <build>
     <plugins>
 
-      <!-- Unpack LWJGL natives -->
+      <!-- Unpack LWJGL dependencies/sources/natives -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
