--- a/org.lwjgl.opencl/pom.xml
+++ b/org.lwjgl.opencl/pom.xml
@@ -12,9 +12,9 @@
   </parent>
 
   <packaging>bundle</packaging>
-  <artifactId>org.lwjgl.egl</artifactId>
-  <name>org.lwjgl.egl</name>
-  <description>LWJGL OSGi bundle (EGL bindings)</description>
+  <artifactId>org.lwjgl.opencl</artifactId>
+  <name>org.lwjgl.opencl</name>
+  <description>LWJGL OSGi bundle (OpenCL bindings)</description>
   <url>https://github.com/LWJGL/lwjgl3-osgi</url>
 
   <dependencies>
@@ -26,7 +26,7 @@
 
     <dependency>
       <groupId>org.lwjgl</groupId>
-      <artifactId>lwjgl-egl</artifactId>
+      <artifactId>lwjgl-opencl</artifactId>
       <scope>provided</scope>
     </dependency>
   </dependencies>
@@ -48,7 +48,7 @@
             <configuration>
               <overWriteReleases>true</overWriteReleases>
               <includeGroupIds>org.lwjgl</includeGroupIds>
-              <includeArtifactIds>lwjgl-egl</includeArtifactIds>
+              <includeArtifactIds>lwjgl-opencl</includeArtifactIds>
               <includeClassifiers>sources</includeClassifiers>
               <includeTypes>jar</includeTypes>
               <includes>**\/*</includes>
@@ -120,11 +120,11 @@
                 <!-- Do not include Java 9 classes from META-INF due to -->
                 <!-- https://issues.apache.org/jira/browse/FELIX-5527 -->
                 <Embed-Dependency>
-                  artifactId=lwjgl-egl;classifier=!sources;inline=!META-INF/**/*.class
+                  artifactId=lwjgl-opencl;classifier=!sources;inline=!META-INF/**/*.class
                 </Embed-Dependency>
 
                 <Export-Package>
-                  org.lwjgl.egl
+                  org.lwjgl.opencl
                 </Export-Package>
 
                 <Specification-Title>Lightweight Java Game Library</Specification-Title>
