Add Vulkan module
This adds a Vulkan module and sets up an optional dependency on it
for the GLFW module.

Affects #5

--- a/org.lwjgl.glfw/pom.xml
+++ b/org.lwjgl.glfw/pom.xml
@@ -30,6 +30,12 @@
       <version>${project.version}</version>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>org.lwjgl.vulkan</artifactId>
+      <version>${project.version}</version>
+      <optional>true</optional>
+    </dependency>
 
     <dependency>
       <groupId>org.lwjgl</groupId>
@@ -229,7 +235,7 @@
                   org.lwjgl.system,
                   org.lwjgl.system.*,
 
-                  <!-- TODO: Optional dependency on Vulkan -->
+                  org.lwjgl.vulkan; resolution:="optional",
                   org.lwjgl.egl; resolution:="optional"
                 </Import-Package>
 
