Correct OVR export

--- a/org.lwjgl.ovr/pom.xml
+++ b/org.lwjgl.ovr/pom.xml
@@ -178,7 +178,7 @@
                 </Embed-Dependency>
 
                 <Export-Package>
-                  org.lwjgl.util.simd
+                  org.lwjgl.ovr
                 </Export-Package>
 
                 <Include-Resource>
