Add Nuklear module
This adds a Nuklear bindings module.

Affects #5

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <module>org.lwjgl.lmdb</module>
     <module>org.lwjgl.lwjgl</module>
     <module>org.lwjgl.nfd</module>
+    <module>org.lwjgl.nuklear</module>
     <module>org.lwjgl.openal</module>
     <module>org.lwjgl.opencl</module>
     <module>org.lwjgl.opengl</module>
@@ -495,6 +496,36 @@
       <dependency>
         <groupId>org.lwjgl</groupId>
         <artifactId>lwjgl-jawt</artifactId>
+        <version>${org.lwjgl.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.lwjgl</groupId>
+        <artifactId>lwjgl-nuklear</artifactId>
+        <version>${org.lwjgl.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.lwjgl</groupId>
+        <artifactId>lwjgl-nuklear</artifactId>
+        <version>${org.lwjgl.version}</version>
+        <classifier>sources</classifier>
+      </dependency>
+      <dependency>
+        <groupId>org.lwjgl</groupId>
+        <artifactId>lwjgl-nuklear</artifactId>
+        <classifier>natives-linux</classifier>
+        <version>${org.lwjgl.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.lwjgl</groupId>
+        <artifactId>lwjgl-nuklear</artifactId>
+        <classifier>natives-macos</classifier>
+        <version>${org.lwjgl.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.lwjgl</groupId>
+        <artifactId>lwjgl-nuklear</artifactId>
+        <classifier>natives-windows</classifier>
         <version>${org.lwjgl.version}</version>
       </dependency>
     </dependencies>
