--- a/org.lwjgl.opengles/pom.xml
+++ b/org.lwjgl.opengles/pom.xml
@@ -218,6 +218,8 @@
             <id>default-bundle</id>
             <configuration>
               <instructions>
+                <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+
                 <Import-Package>
                   <!-- Add explicit imports for LWJGL -->
                   org.lwjgl,
