--- a/org.lwjgl.ovr/pom.xml
+++ b/org.lwjgl.ovr/pom.xml
@@ -161,6 +161,8 @@
             <id>default-bundle</id>
             <configuration>
               <instructions>
+                <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+
                 <Import-Package>
                   <!-- Add explicit imports for LWJGL -->
                   org.lwjgl,
