--- a/org.lwjgl.nuklear/pom.xml
+++ b/org.lwjgl.nuklear/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>org.lwjgl.osgi</groupId>
     <artifactId>org.lwjgl.parent</artifactId>
-    <version>3.1.2-SNAPSHOT</version>
+    <version>3.1.2</version>
   </parent>
 
   <packaging>bundle</packaging>
