--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.lwjgl.osgi</groupId>
   <artifactId>org.lwjgl.parent</artifactId>
-  <version>3.1.2-SNAPSHOT</version>
+  <version>3.1.2</version>
 
   <packaging>pom</packaging>
   <name>org.lwjgl.parent</name>
