--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <org.lwjgl.version>3.1.2-SNAPSHOT</org.lwjgl.version>
+    <org.lwjgl.version>3.1.2</org.lwjgl.version>
   </properties>
 
   <licenses>
