Change osname of Windows systems to comply with OSGI spec

--- a/org.lwjgl.assimp/pom.xml
+++ b/org.lwjgl.assimp/pom.xml
@@ -238,10 +238,10 @@
 
                 <Bundle-NativeCode>
                   assimp32.dll;
-                  osname=Windows; processor=x86,
+                  osname=Win32; processor=x86,
 
                   assimp.dll;
-                  osname=Windows; processor=x86-64,
+                  osname=Win32; processor=x86-64,
 
                   libassimp.so;
                   osname=Linux; processor=x86-64,
