--- a/org.lwjgl.bgfx/pom.xml
+++ b/org.lwjgl.bgfx/pom.xml
@@ -238,10 +238,10 @@
 
                 <Bundle-NativeCode>
                   bgfx32.dll;
-                  osname=Windows; processor=x86,
+                  osname=Win32; processor=x86,
 
                   bgfx.dll;
-                  osname=Windows; processor=x86-64,
+                  osname=Win32; processor=x86-64,
 
                   libbgfx.so;
                   osname=Linux; processor=x86-64,
