--- a/org.lwjgl.opengl/pom.xml
+++ b/org.lwjgl.opengl/pom.xml
@@ -246,10 +246,10 @@
 
                 <Bundle-NativeCode>
                   lwjgl_opengl32.dll;
-                  osname=Windows; processor=x86,
+                  osname=Win32; processor=x86,
 
                   lwjgl_opengl.dll;
-                  osname=Windows; processor=x86-64,
+                  osname=Win32; processor=x86-64,
 
                   liblwjgl_opengl.so;
                   osname=Linux; processor=x86-64,
