--- a/org.lwjgl.lmdb/pom.xml
+++ b/org.lwjgl.lmdb/pom.xml
@@ -238,10 +238,10 @@
 
                 <Bundle-NativeCode>
                   lwjgl_lmdb32.dll;
-                  osname=Windows; processor=x86,
+                  osname=Win32; processor=x86,
 
                   lwjgl_lmdb.dll;
-                  osname=Windows; processor=x86-64,
+                  osname=Win32; processor=x86-64,
 
                   liblwjgl_lmdb.so;
                   osname=Linux; processor=x86-64,
