--- a/org.lwjgl.nanovg/pom.xml
+++ b/org.lwjgl.nanovg/pom.xml
@@ -238,10 +238,10 @@
 
                 <Bundle-NativeCode>
                   lwjgl_nanovg32.dll;
-                  osname=Windows; processor=x86,
+                  osname=Win32; processor=x86,
 
                   lwjgl_nanovg.dll;
-                  osname=Windows; processor=x86-64,
+                  osname=Win32; processor=x86-64,
 
                   liblwjgl_nanovg.so;
                   osname=Linux; processor=x86-64,
