--- a/org.lwjgl.nuklear/pom.xml
+++ b/org.lwjgl.nuklear/pom.xml
@@ -238,10 +238,10 @@
 
                 <Bundle-NativeCode>
                   lwjgl_nuklear32.dll;
-                  osname=Windows; processor=x86,
+                  osname=Win32; processor=x86,
 
                   lwjgl_nuklear.dll;
-                  osname=Windows; processor=x86-64,
+                  osname=Win32; processor=x86-64,
 
                   liblwjgl_nuklear.so;
                   osname=Linux; processor=x86-64,
