--- a/org.lwjgl.opengles/pom.xml
+++ b/org.lwjgl.opengles/pom.xml
@@ -244,10 +244,10 @@
 
                 <Bundle-NativeCode>
                   lwjgl_opengles32.dll;
-                  osname=Windows; processor=x86,
+                  osname=Win32; processor=x86,
 
                   lwjgl_opengles.dll;
-                  osname=Windows; processor=x86-64,
+                  osname=Win32; processor=x86-64,
 
                   liblwjgl_opengles.so;
                   osname=Linux; processor=x86-64,
