--- a/org.lwjgl.ovr/pom.xml
+++ b/org.lwjgl.ovr/pom.xml
@@ -186,10 +186,10 @@
 
                 <Bundle-NativeCode>
                   lwjgl_ovr32.dll;
-                  osname=Windows; processor=x86,
+                  osname=Win32; processor=x86,
 
                   lwjgl_ovr.dll;
-                  osname=Windows; processor=x86-64
+                  osname=Win32; processor=x86-64
                 </Bundle-NativeCode>
 
                 <Specification-Title>Lightweight Java Game Library</Specification-Title>
