--- a/org.lwjgl.par/pom.xml
+++ b/org.lwjgl.par/pom.xml
@@ -238,10 +238,10 @@
 
                 <Bundle-NativeCode>
                   lwjgl_par32.dll;
-                  osname=Windows; processor=x86,
+                  osname=Win32; processor=x86,
 
                   lwjgl_par.dll;
-                  osname=Windows; processor=x86-64,
+                  osname=Win32; processor=x86-64,
 
                   liblwjgl_par.so;
                   osname=Linux; processor=x86-64,
