--- a/org.lwjgl.tinyfd/pom.xml
+++ b/org.lwjgl.tinyfd/pom.xml
@@ -238,10 +238,10 @@
 
                 <Bundle-NativeCode>
                   lwjgl_tinyfd32.dll;
-                  osname=Windows; processor=x86,
+                  osname=Win32; processor=x86,
 
                   lwjgl_tinyfd.dll;
-                  osname=Windows; processor=x86-64,
+                  osname=Win32; processor=x86-64,
 
                   liblwjgl_tinyfd.so;
                   osname=Linux; processor=x86-64,
