Add Java 9 fixes
This sets the required execution environment to >= 1.8 as opposed to
exactly == 1.8. This allows the bundles to resolve on OSGi containers
running on Java 9. This also uses the latest version of the Maven
Bundle plugin.

--- a/org.lwjgl.opengles/pom.xml
+++ b/org.lwjgl.opengles/pom.xml
@@ -220,6 +220,10 @@
               <instructions>
                 <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 
+                <Require-Capability>
+                  osgi.ee;filter:="(&amp;(osgi.ee=JavaSE)(version>=1.8))"
+                </Require-Capability>
+
                 <Import-Package>
                   <!-- Add explicit imports for LWJGL -->
                   org.lwjgl,
