--- a/org.lwjgl.assimp/pom.xml
+++ b/org.lwjgl.assimp/pom.xml
@@ -258,6 +258,10 @@
                 <Implementation-Vendor>lwjgl.org</Implementation-Vendor>
                 <Implementation-Vendor-Id>${project.groupId}</Implementation-Vendor-Id>
 
+                <Require-Capability>
+                  osgi.ee;filter:="(&amp;(osgi.ee=JavaSE)(version>=1.8))"
+                </Require-Capability>
+
                 <Sealed>true</Sealed>
               </instructions>
             </configuration>
