--- a/org.lwjgl.lwjgl/pom.xml
+++ b/org.lwjgl.lwjgl/pom.xml
@@ -340,6 +340,10 @@
               <instructions>
                 <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 
+                <Require-Capability>
+                  osgi.ee;filter:="(&amp;(osgi.ee=JavaSE)(version>=1.8))"
+                </Require-Capability>
+
                 <Import-Package>
                   <!-- LWJGL states that sun.misc.Unsafe is optional but recommended -->
                   sun.misc; resolution:="optional"
